# fastapi-course-freecodecamp

./: .dockerignore  .env-test  .gitignore  Dockerfile  README.md  Read-me-useful-commands.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  entrypoint.sh  git-workflow.md  nginx  pyproject.toml  requirements.txt  settings.json
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 0fa18b3d15e4_add_foreign_key_to_post_table.py  275038d8d2ec_add_phone_number_column_to_posts_table.py  3487ab59e499_add_user_table.py  68f6e362112f_create_posts_table.py  b588ed448020_auto_vote.py
app/: calculations.py  config.py  database.py  logger.py  main.py  models.py  oauth2.py  schemas.py  utils.py  utils_argon.py
app/db/: database.py  db_config.py
app/logging/: logger.py
app/model/: models.py
app/routers/: auth.py  course_pract.py  post.py  user.py  vote.py
app/routers_course/: auth.py  post.py  user.py  vote.py
app/schema/: schemas.py
app/secretes/: config.toml
app/security/: oauth.py
app/sql_files/: query-commands.sql
app/utils_folder/: utils.py
application_documentation/: Read-me-useful-commands.md
hosting/: gunicorn.service  nginx_fastapi_gunicorn_service.conf  ssl_nginx_fastapi_gunicorn_service.conf  updated-gunicorn.conf.py  updated-gunicorn.service
sql_files/: user.sql
tests/: conftest.py  test_posts.py  test_users.py
