[project]
name = "fastapi-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.5",
    "aniso8601>=10.0.1",
    "async-exit-stack>=1.0.1",
    "async-generator>=1.10",
    "autopep8>=2.3.2",
    "bcrypt>=4.3.0",
    "certifi>=2025.8.3",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.3",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "cryptography>=45.0.7",
    "dnspython>=2.7.0",
    "ecdsa>=0.19.1",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "fastapi-docshield>=0.2.1",
    "graphene>=3.4.3",
    "graphql-core>=3.2.6",
    "graphql-relay>=3.2.0",
    "greenlet>=3.2.4",
    "h11>=0.16.0",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "idna>=3.10",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "mako>=1.3.10",
    "markupsafe>=3.0.2",
    "orjson>=3.11.3",
    "passlib>=1.7.4",
    "promise>=2.3",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pyasn1>=0.6.1",
    "pycodestyle>=2.14.0",
    "pycparser>=2.22",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-editor>=1.0.4",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rsa>=4.9.1",
    "ruff>=0.12.12",
    "rx>=3.2.0",
    "six>=1.17.0",
    "sqlalchemy>=2.0.43",
    "starlette>=0.47.3",
    "toml>=0.10.2",
    "typing-extensions>=4.15.0",
    "ujson>=5.11.0",
    "urllib3>=2.5.0",
    "uvicorn>=0.35.0",
    "watchgod>=0.8.2",
    "websockets>=15.0.1",
]
